--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -9,6 +9,12 @@
 
 #construction
 
+#hiring.container-fluid
+    h1 We're Hiring!
+    .buttons
+        a.committees(routerLink="/committees") COMMITTEES
+        a.apply(href='https://ecestudents2018.typeform.com/to/qWrBTC', target="_blank") APPLY
+
 #erasmus.container-fluid
     .left
         h1
