--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -84,6 +84,59 @@
 
 }
 
+
+#hiring {
+      @include wrapper;
+      text-align: center;
+      h1 {
+            font-family: MuseoSans;
+            color: $ece-orange;
+            font-size: ms(3);
+            margin-bottom: 0;
+            margin-top: ms(1);
+      }
+
+      .buttons {
+            @include bp(medium) {
+                  display: flex;
+                  justify-content: center;
+            }
+
+
+            a {
+                  @include button(false, #130ab4, $ece-orange, white, solid);
+                  font-family: MuseoSans;
+                  padding: 0.3em .3em;
+                  font-size: ms(1.5);
+                  font-weight: bold;
+                  text-decoration: none;
+                  display: block;
+                  width: 270px;
+                  border-radius: 10px;
+                  text-transform: uppercase;
+
+                  flex-basis: 100%;
+                  text-align: center;
+                  flex-grow: 1;
+                  flex-shrink: 1;
+                  flex-basis: 0;
+
+                  margin: ms(0) auto;
+                  @include bp(medium) {
+                        margin: ms(0) ms(2);
+                  }
+            }
+
+            a.committees {
+                  background-color: $ece-orange;
+            }
+
+            a.apply {
+                  background-color: $ece-blue;
+            }
+      }
+}
+
 #erasmus {
       @include wrapper;
       display: grid;
@@ -217,18 +270,18 @@
             margin-top: ms(1);
       }
       a {
-        @include button(false, #130ab4, $ece-orange, white, solid);
-        font-family: MuseoSans;
-        padding: 0.3em .3em;
-        font-size: ms(1.5);
-        background-color: $ece-orange;
-        font-weight: bold;
-        text-decoration: none;
-        margin: 25px auto;
-        display: block;
-        width: 270px;
-        border-radius: 10px;
-        text-transform: uppercase;
+            @include button(false, #130ab4, $ece-orange, white, solid);
+            font-family: MuseoSans;
+            padding: 0.3em .3em;
+            font-size: ms(1.5);
+            background-color: $ece-orange;
+            font-weight: bold;
+            text-decoration: none;
+            margin: 25px auto;
+            display: block;
+            width: 270px;
+            border-radius: 10px;
+            text-transform: uppercase;
       }
 }
 
