--- a/src/app/pages/committee-page/template.pug
+++ b/src/app/pages/committee-page/template.pug
@@ -9,4 +9,4 @@ main
             h2 Positions
             ul
                 li(*ngFor="let position of data.positions") {{position}}
-        a.apply(href="https://ecestudents2018.typeform.com/to/qWrBTC", target="_blank") APPLY
+        a.apply(href="https://ecestudents2018.typeform.com/to/Wt9QfA", target="_blank") APPLY
