better frontpage colors

--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -3,9 +3,9 @@
 .shaping
     .wrapper
         h2 Erasmus Centre for
-        h2 Entrepreneurship <span class="blue">Students</span>
+        h2 Entrepreneurship Students
         h2 is
-        h1 <span class="blue">RECRUITING!</span>
+        h1 RECRUITING!
 
 #construction
 
