--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -14,6 +14,7 @@
     .buttons
         a.committees(routerLink="/committees") COMMITTEES
         a.apply(href='https://ecestudents2018.typeform.com/to/Wt9QfA', target="_blank") APPLY
+    h2 DEADLINE: September 16th
 
 #erasmus.container-fluid
     .left
