--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -6,7 +6,7 @@ footer
             .phone.fa
             div 010 - 409 13 04
             .mail.fa
-            div info@ecestudents.com
+            div info@ecestudents.nl
             .privacy.fa
             div
                 a(href="https://ece.nl/privacy-statement/", target="_blank") Privacy Statement
@@ -28,13 +28,10 @@ footer
             ul
                 li
                     a(class="fb", target="_blank", href='https://www.facebook.com/ECEStudents')
-                    .count 3556
+                    .count 4212
                 li
                     a(class="ln", target="_blank", href='https://www.linkedin.com/company/4997540/')
-                    .count 348
-                li
-                    a(class="twit", target="_blank", href='https://twitter.com/ECEStudents')
-                    .count 456
+                    .count 487
                 li
                     a(class="insta", target="_blank", href='https://www.instagram.com/ecestudents/')
-                    .count 502
+                    .count 705
