--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -5,9 +5,8 @@
         h2 Erasmus Centre for
         h2 Entrepreneurship Students
         h2 is
-        h1 RECRUITING!
 
-#construction
+#construction RECRUITING!
 
 #hiring.container-fluid
     h1 We're Hiring!
