--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -4,23 +4,15 @@
     .wrapper
         .left
             h1 Business never sleeps.
-            h3 THE 24 HOUR BUSINESS GAME STARTS IN:
-            countdown( [config]="{stopTime: 1526040000000}")
-                | $!d!
-                span.stamp days
-                | $!h!
-                span.stamp hours
-                | $!m!
-                span.stamp minutes
-                | $!s!
-                span.stamp seconds
+            h3 THE 24 HOUR BUSINESS GAME
+
             // .buttonHolder
             //     button(type='submit')
             //         a(href="#") Sign up
             .under Build your idea in 24 hours <br> Showcase your project! <br>
-                button
+                //button
                     a(href="https://ecestudents2018.typeform.com/to/fMzbJf", target="_blank") Sign Up
-            .deadline REGISTRATIONS ARE CLOSED! SEE YOU THERE!
+            //.deadline REGISTRATIONS ARE CLOSED! SEE YOU THERE!
 
 .about
     .wrapper
