--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -37,12 +37,13 @@ app-main-menu {
     width: 100%;
     background: cd("pages/24hbg/avi-richards-183715", "c_crop,g_north_west,w_4100/c_scale,w_1920") center center no-repeat;
     background-position: 50% 40%;
+    padding: ms(2) 0 ms(3) 0;
 
     .left {
 
         width: 100%;
         @include bp(medium) {
-            width: 60%;
+            width: 68%;
         }
 
         color: white;
@@ -54,7 +55,7 @@ app-main-menu {
 
             a {
                 font-size: ms(2);
-                font-weight: 400;
+                font-weight: 500;
                 color: white;
             }
         }
@@ -90,7 +91,7 @@ app-main-menu {
         font-size: ms(1);
 
         @include bp(medium) {
-            font-size: ms(1.2);
+            font-size: ms(2);
             padding-top: ms(2.5);
         }
     }
