--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -16,12 +16,11 @@
 #construction {
       width: 100%;
       //height: ms(-2);
-      @include text(MuseoSans, 2, white, 700);
+      @include text(MuseoSans, 1.75, white, 700);
       text-align: center;
       background: $ece-blue;
       box-shadow: 0 0 5px 0px #888888;
 }
-
 :host /deep/ .nav {
       @include bp(medium) {
             padding-top: ms(-1);
@@ -47,6 +46,7 @@
 }
 
 .shaping {
+
       background: rgba(255, 126, 21, 1);
       background: -moz-linear-gradient(left, rgba(255, 126, 21, 1) 0%, rgba(228, 87, 36, 1) 100%);
       background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255, 126, 21, 1)), color-stop(100%, rgba(228, 87, 36, 1)));
@@ -57,7 +57,7 @@
       .wrapper {
             @include wrapper;
             padding-top: ms(0);
-            padding-bottom: ms(0);
+            padding-bottom: ms(2);
             @include bp(medium) {
                   padding-top: ms(5);
                   //padding-bottom: ms(3);
@@ -133,7 +133,7 @@
 #erasmus {
       @include wrapper;
       display: grid;
-      align-items: center;
+     //align-items: center;
       grid-template-areas: "left" "right";
       grid-template-rows: auto auto;
 
