--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -4,16 +4,9 @@
     .wrapper
         h2 Erasmus Centre for
         h2 Entrepreneurship Students
-        h2 is
+        
 
-#construction RECRUITING!
-
-#hiring.container-fluid
-    h1 We're Hiring!
-    .buttons
-        a.committees(routerLink="/committees") COMMITTEES
-        a.apply(href='https://ecestudents2018.typeform.com/to/Wt9QfA', target="_blank") APPLY
-    h2 EXTENDED DEADLINE: September 19th
+#construction Build the Future
 
 #erasmus.container-fluid
     .left
@@ -30,7 +23,7 @@
         h3 Who are we?
         p Since its establishment in 2013, ECE Students has grown to be the largest entrepreneurial student association of Erasmus University Rotterdam (EUR), while seeking to contribute to a true culture of innovation and entrepreneurship in the city of Rotterdam. Leaving behind old, cumbersome association structures – and with the support of our alumni and current active members – we created a modern and transparent association in aim to provide the right tools and resources for the entrepreneurial-minded across campus.
         p We provide all the resources — coaching, network, working space — to help anyone bring their ideas into the real world. Do you feel ready? Because we are.
-        p 
+        p
             b Julia Lovas
             br
             i President of the ECE Students Board in 2018-2019
