--- a/src/app/pages/jobportal/template.pug
+++ b/src/app/pages/jobportal/template.pug
@@ -2,7 +2,7 @@
     h1 Welcome to ECE Students'
     h1.bold Job Portal
     img(src='{{ sphere | cd:"w_420,c_fill"}}')
-    a.button(href='https://ecestudents2017.typeform.com/to/h8Bpeg', target="_blank") Apply Now
+    a.button(href='https://ecestudents2018.typeform.com/to/FU0bpc', target="_blank") Apply Now
 
 .process
     h2 HOW IT WORKS
@@ -66,4 +66,4 @@
         p.italic Daphne, 20, Student at EUC and Part-Time employee at Travis the Translator
 
 .match
-    a.button(href='https://ecestudents2017.typeform.com/to/h8Bpeg', target="_blank") Find your match!
+    a.button(href='https://ecestudents2018.typeform.com/to/FU0bpc', target="_blank") Find your match!
