--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -4,7 +4,7 @@ footer
         .contact
 
             .phone.fa
-            div 010 - 409 13 04
+            div 010 - 408 13 04
             .mail.fa
             div info@ecestudents.nl
             .privacy.fa
@@ -19,7 +19,7 @@ footer
             .location.fa
             div Burgemeester Oudlaan 50
                 br
-                | Office H7-27
+                | Office NT-06
                 br
                 | 3062 PA | Rotterdam
         h2.soc Stay Updated
