--- a/src/app/parts/main_menu/template.pug
+++ b/src/app/parts/main_menu/template.pug
@@ -27,4 +27,4 @@ nav([ngClass]="stateservice.menu_color? 'color' : 'nocolor'")
                                 a(routerLink="{{'/'+child.path}}", (click)="this.toggleMenu = true") {{child.label}}
 
                 li.dropdown
-                    a.dropbtn(href="https://startup24.gribb.io/event/startup-24-rotterdam-1", target="_blank", (click)="this.toggleMenu = true") Startup 2
+                    a.dropbtn(href="https://ecestudents.typeform.com/to/FKKvwX", target="_blank", (click)="this.toggleMenu = true") RockBoost
